FIX: spacing issues

--- a/components/blogCard/styles.module.scss
+++ b/components/blogCard/styles.module.scss
@@ -4,7 +4,7 @@
 
 .blogCardStyle {
   margin-top: 62px;
-  padding-left: 50px;
+  padding-left: 20px;
 
   @include mobile {
     padding:0 0 0 0px;
@@ -74,6 +74,10 @@
       color: $black;
       margin-bottom: 30px;
       max-width: 90%;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
 
       @include mobile {
         margin-bottom: 10px;
