--- a/components/blogs/upNextCard/styles.module.scss
+++ b/components/blogs/upNextCard/styles.module.scss
@@ -11,6 +11,14 @@
     padding: 4px 0px 50px;
   }
 
+  .cardGrid {
+    padding-left: 50px;
+
+    @include mobile {
+      padding-left: 0px;
+    }
+  }
+
   .heading {
     font-weight: 500;
     font-size: 31.25px;
@@ -45,8 +53,12 @@
       color: $black;
       font-weight: 500;
       font-size: 25px;
-      line-height: 29px;
+      line-height: 32px;
       letter-spacing: -0.655696px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
 
       @include mobile {
         font-size: 20px;
@@ -56,7 +68,7 @@
     }
 
     .imgbox {
-      height: 223px;
+      height: 250px;
       width: 100%;
       display: flex;
       align-items: center;
