--- a/pages/book-demo/styles.module.scss
+++ b/pages/book-demo/styles.module.scss
@@ -20,6 +20,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 60px;
+    justify-content: space-between;
 
     @include mobile {
       padding: 20px;
@@ -117,6 +118,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    min-height: 100vh;
 
     @include mobile {
       display: block;
