--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -892,11 +892,7 @@ HAMBURGER MENU
 .blog-carousel {
   .ant-carousel .slick-track {
     display: flex;
-    margin-left: -30px !important;
-
-    @include mobile {
-      margin-left: 0px !important;
-    }
+    justify-content: flex-end;
   }
 
   .slick-track .slick-slide {
@@ -1275,7 +1271,7 @@ HAMBURGER MENU
 
   @include mobile {
     padding: 0 20px;
-    margin: 20px 0 50px;
+    margin: 50px 0 50px;
   }
 
   .subscribe-card {
